; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/utilities/extr_utprint.c_AcpiUtPrintNumber.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/utilities/extr_utprint.c_AcpiUtPrintNumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @AcpiUtPrintNumber(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [20 x i8], align 16
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @FALSE, align 4
  %11 = call i8* @AcpiUtPutNumber(i8* %8, i32 %9, i32 10, i32 %10)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %3, align 8
  store i8* %12, i8** %7, align 8
  br label %13

13:                                               ; preds = %17, %2
  %14 = load i8*, i8** %6, align 8
  %15 = getelementptr inbounds [20 x i8], [20 x i8]* %5, i64 0, i64 0
  %16 = icmp ne i8* %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 -1
  store i8* %19, i8** %6, align 8
  %20 = load i8, i8* %19, align 1
  %21 = load i8*, i8** %7, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %7, align 8
  store i8 %20, i8* %21, align 1
  br label %13

23:                                               ; preds = %13
  %24 = load i8*, i8** %7, align 8
  store i8 0, i8* %24, align 1
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}

declare dso_local i8* @AcpiUtPutNumber(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
